--- a/main.kv
+++ b/main.kv
@@ -1,6 +1,6 @@
 #:kivy 1.0
-#:include addFishScreen\addfish.kv
-#:include fishListScreen\fish.kv
+#:include addFishScreen/addfish.kv
+#:include fishListScreen/fish.kv
 
 ScreenManager:
     MenuScreen:
